[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/city_drawing.jpg" type="Texture" id=1]
[ext_resource path="res://resources/Menu-Selection-sound.mp3" type="AudioStream" id=2]
[ext_resource path="res://fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/SoundScene.gd" type="Script" id=5]
[ext_resource path="res://fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://resources/Background_tune.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 1 )
thickness = 10

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 4 )

[node name="SoudScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.4725
margin_top = 5.3454
margin_right = -12.4725
margin_bottom = 5.3454
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1444.0
margin_top = -425.407
margin_right = 476.002
margin_bottom = 854.593
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxColor" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -268.0
margin_right = 268.0
margin_bottom = 499.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -228.0
margin_top = 20.0
margin_right = 229.0
margin_bottom = 398.0
custom_constants/separation = 75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 474.0
margin_bottom = 146.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigurationTitle" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 474.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Sonido"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 474.0
margin_bottom = 146.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundTitle" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 121.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "Volumen"
align = 1

[node name="Music" type="HSlider" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 474.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_styles/slider = SubResource( 3 )
min_value = -24.0
max_value = 0.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 221.0
margin_right = 474.0
margin_bottom = 277.0

[node name="VolverAlMenuButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_right = 474.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 4 )
text = "2. Volver a configuraci√≥n"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -2.0
pitch_scale = 1.05

[connection signal="value_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/Music" to="." method="_on_volumen_value_changed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/VolverAlMenuButton" to="." method="_on_VolverAlMenuButton_pressed"]
[connection signal="finished" from="SelectionSound" to="." method="_on_SelectionSound_finished"]
[connection signal="ready" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_ready"]
